--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ Gemfile.lock
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
