--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ Gemfile.lock
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+# Ignore application configuration
+/config/application.yml
